--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,10 @@ media
 
 # static
 # static/
-/static/
+/static/comment
+/static/contracts
+/static/project
+/static/task
 # /static
 # static/.
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
